# leadsense

./: .env_example  .gitignore  README.md  pyproject.toml
agents/: leadsense.py
crewai/: .env.example  README.md  pyproject.toml
crewai/src/customer_finder/: crew.py  main.py
crewai/src/customer_finder/config/: agents.yaml  tasks.yaml
leadsense_app/: .env.example  README.md  __init__.py  pyproject.toml
leadsense_app/agents/: database.py  fetcher.py  helper.py  leadsense.py  scraper.py  tools.py
leadsense_app/api/: __init__.py  server.py
leadsense_ui/: index.html  package-lock.json  package.json  vite.config.js
leadsense_ui/src/: App.jsx
leadsense_ui/src/components/: CollapsibleSection.jsx  CompanyProfile.jsx  LeadsTable.jsx  SavedLeadsTable.jsx  SectorsList.jsx
leadsense_ui/src/pages/: Home.jsx  LeadDetails.jsx  SavedLeadDetails.jsx
leadsense_ui/src/styles/: prose.css
openai/: pyproject.toml
openai/agents/: leadsense.py
