[project]
name = "customer_finder"
version = "0.1.0"
description = "customer-finder using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0"
]

[project.scripts]
customer_finder = "customer_finder.main:run"
run_crew = "customer_finder.main:run"
train = "customer_finder.main:train"
replay = "customer_finder.main:replay"
test = "customer_finder.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
