[project]
name = "leadsense"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.5.0",
    "openai-agents>=0.0.15",
    "python-dotenv>=1.0.1",
    "pydantic>=2.0.0",
    "httpx>=0.28.1",
    "fastapi[all]>=0.116.0",
    "uvicorn[standard]>=0.32.0",
    "aiohttp>=3.12.15",
    "bs4>=0.0.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
